; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_mcast.c_ip_msource_cmp.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_mcast.c_ip_msource_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_msource = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ip_msource*, %struct.ip_msource*)* @ip_msource_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip_msource_cmp(%struct.ip_msource* %0, %struct.ip_msource* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ip_msource*, align 8
  %5 = alloca %struct.ip_msource*, align 8
  store %struct.ip_msource* %0, %struct.ip_msource** %4, align 8
  store %struct.ip_msource* %1, %struct.ip_msource** %5, align 8
  %6 = load %struct.ip_msource*, %struct.ip_msource** %4, align 8
  %7 = getelementptr inbounds %struct.ip_msource, %struct.ip_msource* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.ip_msource*, %struct.ip_msource** %5, align 8
  %10 = getelementptr inbounds %struct.ip_msource, %struct.ip_msource* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp slt i64 %8, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %24

14:                                               ; preds = %2
  %15 = load %struct.ip_msource*, %struct.ip_msource** %4, align 8
  %16 = getelementptr inbounds %struct.ip_msource, %struct.ip_msource* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.ip_msource*, %struct.ip_msource** %5, align 8
  %19 = getelementptr inbounds %struct.ip_msource, %struct.ip_msource* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %17, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %24

23:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %22, %13
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
